# FFmpegAndroid

./: .gitignore  README.md  READMERUS.md  build.gradle  build.sh  build_ffmpeg_onelib.sh  gradle.properties  settings.gradle
Live/: CMakeLists.txt  build.gradle  proguard-rules.pro
Live/src/main/: AndroidManifest.xml
Live/src/main/cpp/: AudioStream.cpp  AudioStream.h  PacketQueue.h  PushGeneric.h  PushInterface.h  RtmpPusher.cpp  VideoStream.cpp  VideoStream.h  live.c  queue.c  queue.h  safe_queue.h
Live/src/main/cpp/include/x264/: x264.h  x264_config.h
Live/src/main/cpp/rtmp/: CMakeLists.txt  amf.c  hashswf.c  log.c  parseurl.c  rtmp.c  rtmp.h
Live/src/main/res/layout/: activity_live.xml  activity_push.xml  activity_rtmp_live.xml
Live/src/main/res/raw/: amaro.glsl  antique.glsl  beauty.glsl  blackcat.glsl  brannan.glsl  brightness.glsl  brooklyn.glsl  calm.glsl  constrast.glsl  cool.glsl  crayon.glsl  earlybird.glsl  emerald.glsl  evergreen.glsl  exposure.glsl  fragment.glsl  freud.glsl  healthy.glsl  hefe.glsl  hudson.glsl  hue.glsl  inkwell.glsl  kevin_new.glsl  latte.glsl  lomo.glsl  lookup.glsl  n1977.glsl  nashville.glsl  nostalgia.glsl  pixar.glsl  rise.glsl  romance.glsl  sakura.glsl  saturation.glsl  sharpen.glsl  sierra.glsl  sketch.glsl  skinwhiten.glsl  suger_tablets.glsl  sunrise.glsl  (+12 more)
Live/src/main/res/values/: strings.xml
Live/src/main/res/values-en/: strings.xml
Live/src/main/res/values-zh-rCN/: strings.xml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/frank/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVpacket_queue.c  AVpacket_queue.h  CMakeLists.txt  audio_lame.c  audio_player.c  audio_player.cpp  audio_player_jni.cpp  audio_resample.cpp  cmdutils.c  common_media_jni.cpp  cut_video.cpp  cut_video.h  fast_start.c  ff_audio_player.cpp  ff_audio_player.h  ff_audio_resample.cpp  ff_audio_resample.h  ff_http_pusher.cpp  ff_http_pusher.h  ff_rtmp_pusher.cpp  ff_rtmp_pusher.h  ffmpeg.c  ffmpeg_cmd.c  ffmpeg_jni_define.h  ffmpeg_pusher.cpp  ffmpeg_pusher_jni.cpp  ffprobe_cmd.c  ffprobe_cmd.cpp  media_player.c  media_player.cpp  media_transcode.cpp  openSL_audio_player.c  openSL_audio_player.cpp  opensl_audio_player.cpp  packet_queue.cpp  packet_queue.h  video_cutting.cpp  video_cutting.h  video_filter.c  video_player.c  (+1 more)
app/src/main/cpp/ffmpeg/: cmdutils.c  cmdutils.cpp  cmdutils.h  config.h  ffmpeg.c  ffmpeg.cpp  ffmpeg.h  ffmpeg_common.h  ffmpeg_filter.c  ffmpeg_filter.cpp  ffmpeg_hw.cpp  ffmpeg_hw.h  ffmpeg_opt.c  ffmpeg_opt.cpp  ffprobe.c  ffprobe.h  opt_common.c
app/src/main/cpp/ffplayer/: FFMessageQueue.cpp  FFMessageQueue.h  ffmsg_queue.h  ffplay_define.h
app/src/main/cpp/ffplayer/clock/: MediaClock.cpp  MediaClock.h
app/src/main/cpp/ffplayer/queue/: FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h
app/src/main/cpp/include/lame/: lame.h
app/src/main/cpp/metadata/: Mutex.h  ffmpeg_media_retriever.c  ffmpeg_media_retriever.h  media_retriever.cpp  media_retriever.h  media_retriever_jni.cpp  metadata_util.c  metadata_util.h
app/src/main/cpp/pcm/: pcm_process.cpp
app/src/main/cpp/sox/: 8svx.c  CMakeLists.txt  CmakeLists.txt  Makefile.am  adpcm.c  adpcm.h  adpcms.c  adpcms.h  aifc-fmt.c  aiff-fmt.c  aiff.c  aiff.h  al-fmt.c  alsa.c  amr-nb.c  amr-wb.c  amr.h  ao.c  au.c  avr.c  band.h  bend.c  biquad.c  biquad.h  biquads.c  caf.c  cdr.c  chorus.c  compand.c  compandt.c  compandt.h  contrast.c  coreaudio.c  cvsd-fmt.c  cvsd.c  cvsd.h  cvsdfilt.h  dat.c  dcshift.c  deemph.plt  (+160 more)
app/src/main/cpp/sox/bit-rot/: mmsystem.h  (+2 more)
app/src/main/cpp/visualizer/: block_queue.c  block_queue.h  execute_fft.c  execute_fft.cpp  execute_fft.h  fft.cpp  fft.h  fixed_fft.cpp  fixed_fft.h  frank_visualizer.cpp  frank_visualizer.h  frank_visualizer_jni.cpp  queue.c  vlc_queue.h  window.c  window.cpp  window.h
app/src/main/cpp/yuv/: yuv_converter.cpp  yuv_converter.h
app/src/main/cpp/yuv2rgb/: yuv_2_rgb.cpp  yuv_to_rgb.h
app/src/main/res/drawable/: btn.xml  btn_circle.xml  btn_point.xml  btn_rect.xml  btn_rect_normal.xml  btn_rect_selected.xml  btncircle.xml  item_background_gray.xml  white_background.xml  whitebg.xml
app/src/main/res/layout/: activity_audio_effect.xml  activity_audio_handle.xml  activity_audio_play.xml  activity_camera_filter.xml  activity_encoder_list.xml  activity_equalizer.xml  activity_filter.xml  activity_live.xml  activity_main.xml  activity_media_handle.xml  activity_media_player.xml  activity_preview.xml  activity_probe.xml  activity_push.xml  activity_splash.xml  activity_video_handle.xml  activity_video_player.xml  activity_video_reverse.xml  adapter_equalizer.xml  item_progress.xml  item_select.xml  item_waterfall.xml  layout_activity_main.xml  layout_activity_player.xml  layout_bottom_item.xml  layout_player_info.xml  layout_top_item.xml  preview_video.xml
app/src/main/res/menu/: menu_setting.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
engine/common/: CMakeLists.txt
engine/common/include/: CommonUtil.h  NalUnitParser.h  NextDefine.h  NextDictionary.h  NextErrorCode.h  NextLog.h  NextMessage.h  NextStructDefine.h
engine/common/include/android/: JniEnv.h  JniUtil.h
engine/common/src/: NextDictionary.cpp  NextLog.cpp
engine/common/src/android/: JniEnv.cpp  JniUtil.cpp
engine/decode/: AudioDecoder.h  CMakeLists.txt  FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderFactory.cpp  VideoDecoderFactory.h
engine/decode/common/: MixedBuffer.cpp  MixedBuffer.h  VideoCodecInfo.h  h26x_parser.c  h26x_parser.h  nal_convert.c  nal_convert.h
engine/demux/: CMakeLists.txt  ExtractorInterface.h  FFmpegUtil.cpp  FFmpegUtil.h  NextExtractor.cpp  NextExtractor.h
libmp3/: CMakeLists.txt  build.gradle  proguard-rules.pro
libmp3/src/main/: AndroidManifest.xml
libmp3/src/main/cpp/: audio_lame.c
libmp3/src/main/res/values/: strings.xml
(+423 files in other folders)
